fixed background of Home page on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,8 +2,12 @@
 
 #home{
   background:url('../img/neven-krcmarek-193468.jpg');
-  min-height: 1120px;
+  min-height: 1200px;
   padding-top: 70px;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -24,11 +28,13 @@
 //adjust for bootstrap nav expand
 @media (max-width:575px) {
   #home{
-    padding-top: 260px;
+    padding-top: 100px;  //260
+    background-attachment: scroll;
     .title-div{
-      color:white;
+      //color:white;
 
       .fa-chevron-circle-down{
+        color: #00FF00;
         margin-top: 0px;
       }
     }
@@ -46,7 +52,7 @@
 
 #about{
   padding-top: 150px;
-  min-height: 1120px;
+  min-height: 1200px;
   // nicole-mason-19744.jpg
   background: url('../img/overlay.png');
   background-size: cover;
